--- a/src/public/css/sorteo.css
+++ b/src/public/css/sorteo.css
@@ -1,107 +1,232 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  html {
-    font-size: 62.5%;
-  }
-  
-  :root {
-    --verde1: #025E36;
-    --verde2: #03854C;
-    --verde3: #039E5B;
-    --verde4: #03AB62;
-    --verde5: #05EB87;
-  }
-  
-  body {
-    width: 100vw;
-    height: 100vh;
-    background-image: url("https://st4.depositphotos.com/1005738/22064/v/600/depositphotos_220642064-stock-illustration-food-icon-seamless-pattern-with.jpg");
-    background-position: center;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+:root {
+  --verde1: #025E36;
+  --verde2: #03854C;
+  --verde3: #039E5B;
+  --verde4: #03AB62;
+  --verde5: #05EB87;
+}
+
+.active {
+  display: none;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: #330000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF6600'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.4'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  /*   background-position: left; */
+  -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
+}
+
+header ul {
+  display: flex;
+  list-style: none;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  justify-content: right;
+}
+
+header ul li {
+  background-color: rgba(0, 0, 0, 0.151);
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  font-size: 1.4rem;
+}
+
+/* Modal */
+.modal {
+  position: fixed;
+  top: 80px;
+  width: 100%;
+  z-index: 1;
+}
+
+.modal .container-modal {
+  background-color: rebeccapurple;
+  width: 250px;
+  margin: 0 auto;
+  border-radius: 5px;
+  padding: 0 5px;
+  z-index: 1;
+  color: white;
+}
+
+.modal .container-modal h2 {
+  font-size: 2rem;
+  padding: 10px;
+  border-bottom: 2px solid white;
+}
+
+.modal .container-modal p {
+  list-style: none;
+  font-size: 1.6rem;
+  font-weight: bold;
+  padding: 10px;
+}
+
+body {
+  width: 100vw;
+  padding-top: 100px;
+  /*   background-position: center; para centrar la imagen */
+  color: white;
+  font-family: 'Exo 2', sans-serif;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  background-color: #330000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FF6600'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.4'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-x: hidden;
+}
+
+/* Main */
+main {
+  color: white;
+  width: 100%;
+  padding: 0 10px;
+}
+
+.sorteo-dos-container {
+  width: 100%;
+  max-width: 600px;
+  min-width: 250px;
+  position: relative;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.171);
+}
+
+.sorteo-dos-container {
+  /*   background-color: #025E36; */
+  width: 100%;
+  align-items: center;
+  text-align: center;
+}
+
+.sorteo-dos-container h2 {
+  font-size: 4rem;
+  font-weight: 800;
+  padding: 30px 0;
+}
+
+.sorteo-dos-container .nombres {
+  background-color: white;
+  border-radius: 100px;
+  width: 280px;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
+  border: 2px solid rgb(100, 100, 100);
+}
+
+.sorteo-dos-container .nombres .agregar-jugador {
+  font-size: 2rem;
+  color: rgb(100, 100, 100);
+}
+
+
+.sorteo-dos-container .nombres .sorteo-dos {
+  background-color: transparent;
+  border: none;
+  width: 85%;
+  padding: 10px 15px;
+  font-size: 1.6rem;
+}
+
+.sorteo-dos-container .nombres .sorteo-dos:focus {
+  outline: none;
+}
+
+.sorteo-dos-container .nombres .agregar-jugador {
+  background-color: transparent;
+  border: none;
+  width: 15%;
+}
+
+/* .sorteo-dos-container .botones {
+  background-color: seagreen;
+} */
+
+.sorteo-dos-container .botones .ganador-btn-dos {
+  background-color: #FF6600;
+  border: 2px solid white;
+  padding: 8px;
+  border-radius: 8px;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+/* lista */
+.sorteo-dos .lista {
+  background-color: rgba(0, 0, 0, 0.171);
+  width: 100%;
+  max-width: 600px;
+  min-width: 200px;
+  margin: 0 auto;
+  margin-top: 20px;
+  text-align: left;
+}
+
+.sorteo-dos .lista h3 {
+  font-size: 2rem;
+  padding: 10px 5px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid;
+}
+
+.sorteo-dos .lista-jugadores {
+  list-style: none;
+}
+
+.sorteo-dos .lista-jugadores li {
+  font-size: 1.6rem;
+  padding: 5px;
+  margin: 4px 0;
+  border-left: 2px solid white;
+}
+
+
+@media (min-width: 575px) {
   .sorteo-dos {
-    width: 300px;
-    height: auto;
-    border-radius: 5px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #03854d8f;
-    border: 2px solid var(--verde3);
   }
-  
-  .sorteo-dos-container {
-    text-align: center;
-  }
-  
-  .sorteo-dos-container h2 {
-    font-size: 2rem;
-    padding-bottom: 20px;
-    padding-top: 10px;
-  }
-  
-  .sorteo-dos-container ul {
+
+  .sorteo-dos .lista-jugadores {
     padding: 10px;
-    border: 2px solid var(--verde3);
-    background-color: transparent;
-    border-radius: 5px;
-    font-size: 1.6rem;
-    list-style: none;
   }
-  
-  .nombres {
-    /* background-color: red; */
-    padding-top: 20px;
-    padding-bottom: 10px;
-  }
-  
-  .nombres input {
-    border: 2px solid var(--verde3);
-    background-color: transparent;
-    color: white;
+
+  .sorteo-dos .lista {
+    margin-left: 10px;
+    margin-top: 0;
     padding: 5px;
-    text-align: center;
-    border-radius: 5px;
-    font-size: 1.6rem;
   }
-  
-  .nombres input:hover {
-    border: 2px solid var(--verde5);
-  }
-  
-  .botones {
+
+  /*   .sorteo-dos .lista h3 {
+    font-size: 2rem;
     padding: 10px 0;
-  }
-  
-  .botones #agregar-jugador {
-    border: 2px solid var(--verde3);
-    background-color: transparent;
-    padding: 5px 0;
-    color: white;
-    border-radius: 5px;
-  }
-  
-  .botones #agregar-jugador:active {
-    background-color: var(--verde5);
-  }
-  
-  .botones #ganador-btn-dos {
-    border: 2px solid var(--verde3);
-    background-color: transparent;
-    padding: 5px 0;
-    color: white;
-    border-radius: 5px;
-  }
-  
-  .botones #ganador-btn-dos:active {
-    background-color: var(--verde5);
-  }
+    margin-bottom: 10px;
+    border-bottom: 2px solid;
+  } */
+}
