--- a/src/public/css/sorteo.css
+++ b/src/public/css/sorteo.css
@@ -33,6 +33,7 @@ header {
   -webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.75);
+  z-index: 1;
 }
 
 header ul {
