--- a/src/public/css/sorteo.css
+++ b/src/public/css/sorteo.css
@@ -43,37 +43,46 @@ header ul {
   max-width: 600px;
   margin: auto;
   justify-content: right;
+  padding: 10px;
 }
 
-header ul li {
-  background-color: rgba(0, 0, 0, 0.151);
+header ul .home {
+  background-color: #FF6600;
   padding: 10px;
-  margin: 10px;
   border-radius: 5px;
   font-size: 1.6rem;
+  border-radius: 5px 0 0 5px;
+}
+
+header ul .winner {
+  background-color: #330000;
+  padding: 10px;
+  border-left: 3px dashed #FF6600;
+  font-size: 1.6rem;
+  border-radius: 0 5px 5px 0;
 }
 
 /* Modal */
 .modal {
   position: fixed;
   top: 80px;
-  width: 100%;
+  width: 95%;
   z-index: 1;
 }
 
 .modal .container-modal {
-  background-color: rebeccapurple;
-  width: 250px;
+  background-color: #FF6600;
+  width: 300px;
   margin: 0 auto;
   border-radius: 5px;
-  padding: 0 5px;
+  padding: 5px;
   z-index: 1;
   color: white;
 }
 
 .modal .container-modal h2 {
   font-size: 2rem;
-  padding: 10px;
+  padding: 15px;
   border-bottom: 2px solid white;
 }
 
@@ -84,6 +93,29 @@ header ul li {
   padding: 10px;
 }
 
+/* contador */
+.contador {
+  position: fixed;
+  top: 80px;
+  width: 95%;
+  z-index: 1;
+}
+
+.container-contador {
+  background-color: #FF6600;
+  width: 300px;
+  margin: 0 auto;
+  border-radius: 5px;
+  padding: 5px;
+  z-index: 1;
+  color: white;
+}
+.container-contador h2{
+  font-size: 4rem;
+  padding: 25px 0;
+}
+
+/* body */
 body {
   width: 100vw;
   padding-top: 100px;
@@ -114,8 +146,8 @@ main {
   min-width: 250px;
   position: relative;
   margin: 0 auto;
-  padding-bottom: 20px;
- /*  background-color: rgba(0, 0, 0, 0.171); */
+  padding-bottom: 25px;
+  border-bottom: 3px solid #330000;
 }
 
 .sorteo-dos-container {
@@ -125,12 +157,13 @@ main {
 }
 
 .sorteo-dos-container h2 {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 800;
   padding: 20px 0;
-  background-color: #ff66008e;
+  background-color: #330000;
   border-radius: 5px 5px 5px 0px;
 }
+
 .sorteo-dos-container h4 {
   background-color: #00000038;
   width: 170px;
@@ -139,7 +172,7 @@ main {
   padding: 10px 20px;
   border-radius: 0px 0px 5px 5px;
   text-align: left;
-  border-top: 10px dashed #ff66008e;
+  border-top: 10px dashed #330000;
   margin-bottom: 20px;
 }
 
@@ -150,6 +183,7 @@ main {
   gap: 10px;
   justify-content: center;
 }
+
 .sorteo-dos-container .nombres .sorteo-dos {
   border-radius: 100px;
   background-color: white;
@@ -169,10 +203,12 @@ main {
   color: white;
   background-color: #FF6600;
 }
+
 .sorteo-dos-container .nombres .sorteo-dos:focus {
   outline: none;
 }
-.sorteo-dos-container .nombres .botones{
+
+.sorteo-dos-container .nombres .botones {
   display: flex;
   gap: 10px;
 }
@@ -181,7 +217,7 @@ main {
 .sorteo-dos-container .botones .ganador-btn-dos {
   background-color: #FF6600;
   border: 2px solid white;
-  padding:  0 8px;
+  padding: 0 8px;
   border-radius: 100px;
   color: white;
   font-size: 1.6rem;
@@ -190,30 +226,32 @@ main {
 
 /* lista */
 .sorteo-dos .lista {
-/*   background-color: rgba(0, 0, 0, 0.171); */
   width: 100%;
-  max-width: 600px;
-  min-width: 200px;
+  max-width: 300px;
+  min-width: 150px;
   margin: 0 auto;
   margin-top: 20px;
   text-align: left;
 }
 
 .sorteo-dos .lista h3 {
+  background-color: #330000;
+  border-radius: 5px 5px 0px 0px;
   font-size: 2rem;
-  padding: 10px 5px;
-  margin-bottom: 10px;
+  padding: 10px;
   border-bottom: 2px solid;
 }
 
 .sorteo-dos .lista-jugadores {
   list-style: none;
+  background-color: #00000038;
+  border-radius: 0 0 5px 5px;
 }
 
 .sorteo-dos .lista-jugadores li {
   font-size: 1.6rem;
   padding: 5px;
-  margin: 4px 0;
+  margin: 0 0 5px 0;
   border-left: 2px solid white;
 }
 
@@ -230,7 +268,7 @@ main {
   .sorteo-dos .lista {
     margin-left: 10px;
     margin-top: 0;
-    padding: 5px;
+    padding: 0 5px;
   }
 
   /*   .sorteo-dos .lista h3 {
