--- a/src/public/css/sorteo.css
+++ b/src/public/css/sorteo.css
@@ -54,7 +54,7 @@ header ul .home {
   border-radius: 5px 0 0 5px;
 }
 
-header ul .winner {
+header ul .winnerBtn {
   background-color: #330000;
   padding: 10px;
   border-left: 3px dashed #FF6600;
